--- a/auth/styles.css
+++ b/auth/styles.css
@@ -359,7 +359,7 @@ body {
   /* Стилі для форми */
   label {
     font-size: 14px;
-    color: #333;
+    color: black;
     margin-bottom: 5px;
     display: block;
   }
@@ -369,7 +369,7 @@ body {
   input[type="tel"],
   input[type="password"],
   input[type="file"] {
-    width: 100%;
+    width: 95%;
     padding: 10px;
     margin-bottom: 15px;
     border: 1px solid #ccc;
@@ -443,7 +443,7 @@ form {
   background: linear-gradient(135deg, #6a11cb, #2575fc);
   border-radius: 10px;
   color: white;
-  width: 300px;
+  width: 500px;
 }
 
 /* Стиль для мітки */
